github link, about tab

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,9 +7,9 @@ website:
     left:
       - href: index.qmd
         text: Home
+      - about.qmd
       - Resume.qmd
       - Projects.qmd
-      - About.qmd
 
 format: 
   html: 
